--- a/contact.html
+++ b/contact.html
@@ -4,37 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" heref="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-        <div nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">Amena Ahmed</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                  <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link active" href="index.html">About <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-                    <a class="nav-item nav-link" href="contact.html">Contact</a>
-</div>
-</div>
-</div>   
-    <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
-         <h1>Contact</h1>   
+   <div class="container">
+        <div nav class="navbar navbar-expand-lg" id="navbar">
+            <a class="navbar-brand mainnavtxt" href="#">Amena Ahmed</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ml-auto" >
+                <a class="nav-item nav-link navlink" id="navlink1" href="index.html">About</a>
+                <a class="nav-item nav-link navlink" id="navlink2" href="portfolio.html">Portfolio</a>
+                <a class="nav-item nav-link navlink" id="navlink3" href="contact.html">Contact</a>
+            </div>
         </div>
-        <div class="col-md-3"></div>
+        </div>   
+    <div class="row">
+       <div class="col-md-1"></div>
+        <div class="col-lg-8">
+         <h1 id="title" style=text-align:left;>Contact</h1>   
+        </div>
+  
     </div>
 
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-1">
 
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-8">
     <form>
                 <div class="form-group">
                   <label for="exampleFormControlInput1">Name</label>
@@ -44,28 +45,7 @@
                 <div class="form-group">
                         <label for="exampleFormControlInput1">Email address</label>
                         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                      </div>
-
-                <!-- <div class="form-group">
-                  <label for="exampleFormControlSelect1">Example select</label>
-                  <select class="form-control" id="exampleFormControlSelect1">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                  </select>
                 </div>
-                <div class="form-group">
-                  <label for="exampleFormControlSelect2">Example multiple select</label>
-                  <select multiple class="form-control" id="exampleFormControlSelect2">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                  </select>
-                </div> -->
                 <div class="form-group">
                   <label for="exampleFormControlTextarea1">Comments</label>
                   <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
@@ -76,5 +56,6 @@
               </div>
          <div class="col-md-3"></div>
         </div>      
+      </div>
 </body>
 </html>
