--- a/index.html
+++ b/index.html
@@ -4,38 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Amena Ahmed</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
+<div class="container"> 
+<div nav class="navbar navbar-expand-lg" id="navbar">
+    <a class="navbar-brand mainnavtxt" href="#">Amena Ahmed</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav ml-auto" >
+        <a class="nav-item nav-link navlink" id="navlink1" href="index.html">About</a>
+        <a class="nav-item nav-link navlink" id="navlink2" href="portfolio.html">Portfolio</a>
+        <a class="nav-item nav-link navlink" id="navlink3" href="contact.html">Contact</a>
+    </div>
+</div>
+</div>
 
-  <div nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">Amena Ahmed</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                  <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link active" href="index.html">About <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-                    <a class="nav-item nav-link" href="contact.html">Contact</a>
-</div>
-</div>
-</div>
-    <div class="container"> 
-        <div class="row">
-            <div class="col-md-12 about1">
-                <h1>About</h1> 
-            </div>
+
+    <div class="row" id="about">
+        
+        <div class="col-md-10" >
+            <h1 id="title" style=text-align:left>About</h1> 
         </div>
-            <div class="row">
-                <div class="col-md-4">
-                        <img src="http://placehold.it/150x150" height= "150px"; width="150px" alt="image of sunset"/>
+        <div class="col-md-2"></div>
+    </div>
+<div class="row">
+                <div class="col-md-3" id="profimg">
+                        <img id="pimg" src="http://placehold.it/150x150" height= "200px"; width="200px" alt="image of sunset"/>
                 </div>
 
-                <div class="col-md-8">
+                <div class="col-md-9" id="proftext">
                   
                         <p> Amena Ahmed received her bachelor's in Elementary Education from Northeastern Illinois University. She taught in various classrooms for over five years, including special education, middle school literature, and primary grades. She turned to computer science and web development to channel her inner creative side. She is currenlty pursuing web development as a student at Northwestern University's Coding Bootcamp and aspires to study computer science and work to create a positive impact in education, health care, and other humanitarian causes. She currently lives in Skokie with her family. In her spare time she loves to hike, go camping, and explore nature.
                         </p>
