--- a/portfolio.html
+++ b/portfolio.html
@@ -10,71 +10,74 @@
 <title>Amena Ahmed</title>
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" heref="style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
 <body>
-
-<div nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Amena Ahmed</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse"
-    data-target="#navbarNavAltMarkup"                       aria-controls="navbarNavAltMarkup"                 aria-expanded="false" aria-label="Toggle             navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav mr-auto">
-        <a class="nav-item nav-link" href="index.html">About</a></a>
-        <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-        <a class="nav-item nav-link" href="contact.html">Contact</a> 
+        <div class="container"> 
+               <div nav class="navbar navbar-expand-lg" id="navbar">
+                <a class="navbar-brand mainnavtxt" href="#">Amena Ahmed</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ml-auto" >
+                        <a class="nav-item nav-link navlink" id="navlink1" href="index.html">About</a>
+                                <a class="nav-item nav-link navlink" id="navlink2" href="portfolio.html">Portfolio</a>
+                                <a class="nav-item nav-link navlink" id="navlink3" href="contact.html">Contact</a>
+                </div>
+                </div>
         </div>
-    </div>
-</div>
 
-<!-------- End Nav -------->
-<div class="container">
     <div class="row">
         <div class="col-lg-8">  
           <div class="page-header">
-            <h1>Portfolio</h1>
+            <h1 id="title" style=text-align:left>Portfolio</h1>
           </div>  
         </div>
     </div>
 
     <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-3 port-pic">
-                <img src="assets/PortfolioPics/HangManGame.png" width="150px" height="150px" alt="portfolio3">
+        <!-- <div class="col-lg-3"></div> -->
+        <div class="col-lg-6 port-pic">
+                <a href="https://amena99.github.io/Word_Guess_Game/" target="_blank"><img src="assets/PortfolioPics/HangManGame.png" width="150px" height="150px" alt="portfolio3">
                 <p>Under the Sea Word Guess Game</p>
         </div>
-        <div class="col-lg-3 port-pic">
-                <img src="assets/PortfolioPics/JQueryStarWarsGame.png" width="150px" height="150px" alt="portfolio art">
+        <div class="col-lg-6 port-pic">
+                <a href="https://amena99.github.io/unit-4-game/" target="_blank"><img src="assets/PortfolioPics/JQueryStarWarsGame.png" width="150px" height="150px" alt="portfolio art">
                 <p>Star Wars Battle Game</p>
         </div>
-        <div class="col-lg-3"></div>
+        <!-- <div class="col-lg-3"></div> -->
     </div>
 
     <div class="row">
-            <div class="col-lg-3"></div>
-            <div class="col-lg-3 port-pic">
-                    <img src="assets/PortfolioPics/QuizTriviaApp.png" width="150px" height="150px" alt="portfolioart2">
+            <!-- <div class="col-lg-3"></div> -->
+            <div class="col-lg-6 port-pic">
+                    <a href="https://amena99.github.io/TriviaGame/" target="_blank"><img src="assets/PortfolioPics/QuizTriviaApp.png" width="150px" height="150px" alt="portfolioart2">
                     <p>Geography Trivia Timed Quiz</p>
             </div>
-            <div class="col-lg-3 port-pic">
-                    <img src="assets/PortfolioPics/TravelAPIApp.png" width="150px" height="150px" alt="portfolio art">
+            <div class="col-lg-6 port-pic">
+                    <a href="https://amena99.github.io/GIPHY_API_Site/" target="_blank"><img src="assets/PortfolioPics/TravelAPIApp.png" width="150px" height="150px" alt="portfolio art">
                     <p>Travel Attractions GIPHY API Site</p>
             </div>
-            <div class="col-lg-3"></div>
+            <!-- <div class="col-lg-3"></div> -->
         </div>
     
     <div class="row">
-            <div class="col-lg-3"></div>
-            <div class="col-lg-3 port-pic">
-                    <img src="assets/PortfolioPics/HungryGeoLocAPI.png" width="150px" height="150px" alt="porfolio art">
+            <!-- <div class="col-lg-3"></div>  -->
+            <div class="col-lg-6 port-pic">
+                    <a href="ttps://nueva-orange-team.github.io/Project1/" target="_blank"><img src="assets/PortfolioPics/HungryGeoLocAPI.png" width="150px" height="150px" alt="porfolio art">
                     <p>Hungry Restaurant Finder By GeoLocation</p>
             </div>
+            <div class="col-lg-6 port-pic">
+                        <a href="https://amena99.github.io/Live-Train-Schedule/" target="_blank"><img src="assets/PortfolioPics/Screen Shot 2018-12-08 at 11.26.46 PM.png" width="150px" height="150px" alt="porfolio art">
+                                <p>Live Updating Trains Arrival Schedule</p>
+            </div>
+            <!-- <div class="col-lg-3"></div> -->
     </div>
-</div>
+    </div>
+
 </body>
 
 </html>
