Fixed the Restaurant API Link

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
     <div class="row">
             <!-- <div class="col-lg-3"></div>  -->
             <div class="col-lg-6 port-pic">
-                    <a href="ttps://nueva-orange-team.github.io/Project1/" target="_blank"><img src="assets/PortfolioPics/HungryGeoLocAPI.png" width="150px" height="150px" alt="porfolio art">
+                    <a href="https://nueva-orange-team.github.io/Project1/" target="_blank"><img src="assets/PortfolioPics/HungryGeoLocAPI.png" width="150px" height="150px" alt="porfolio art">
                     <p>Hungry Restaurant Finder By GeoLocation</p>
             </div>
             <div class="col-lg-6 port-pic">
