--- a/contact.html
+++ b/contact.html
@@ -9,20 +9,25 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-   <div class="container">
-        <div nav class="navbar navbar-expand-lg" id="navbar">
-            <a class="navbar-brand mainnavtxt" href="#">Amena Ahmed</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ml-auto" >
-                <a class="nav-item nav-link navlink" id="navlink1" href="index.html">About</a>
-                <a class="nav-item nav-link navlink" id="navlink2" href="portfolio.html">Portfolio</a>
-                <a class="nav-item nav-link navlink" id="navlink3" href="contact.html">Contact</a>
+    <div class="container-fluid fullpage"> 
+            <div class="row">
+                    <div class="col-lg-12">
+                    <div nav class="navbar navbar-expand-lg" id="navbar">
+                        <a class="navbar-brand mainnavtxt" href="#">Amena Ahmed</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ml-auto" id="nav_links" >
+                        <a class="nav-item nav-link navlink" id="navlink1" href="index.html">About</a>
+                        <a class="nav-item nav-link navlink" id="navlink2" href="portfolio.html">Portfolio</a>
+                        <a class="nav-item nav-link navlink" id="navlink3" href="contact.html">Contact</a>
+                    </div>
+                    </div>                
+                    </div>
+                </div>
             </div>
-        </div>
-        </div>   
+         
     <div class="row">
        <div class="col-md-1"></div>
         <div class="col-lg-8">
@@ -35,27 +40,32 @@
         <div class="col-md-1">
 
         </div>
-        <div class="col-lg-8">
-    <form>
+        <div class="col-lg-8" id="contact-1">
+    <form accept-charset="UTF-8" action="https://usebasin.com/f/65da175249c3" method="POST">
                 <div class="form-group">
                   <label for="exampleFormControlInput1">Name</label>
-                  <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="John Smith">
+                  <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Your Name" required>
                 </div>
 
                 <div class="form-group">
                         <label for="exampleFormControlInput1">Email address</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                        <input type="email" class="form-control" id="exampleFormControlInput1" id= "email" name ="email" placeholder="name@example.com" required>
                 </div>
                 <div class="form-group">
                   <label for="exampleFormControlTextarea1">Comments</label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
+                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="10" required></textarea>
                 </div>
 
                 <button type="button" class="btn btn-secondary">Submit</button>
               </form>
               </div>
          <div class="col-md-3"></div>
-        </div>      
+        </div>  
+        <div class="row" id="contact-2">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-10"></div>
+            <div class="col-lg-1"></div>
+        </div>    
       </div>
 </body>
 </html>
