--- a/contact.html
+++ b/contact.html
@@ -43,17 +43,17 @@
         <div class="col-lg-8" id="contact-1">
     <form accept-charset="UTF-8" action="https://usebasin.com/f/65da175249c3" method="POST">
                 <div class="form-group">
-                  <label for="exampleFormControlInput1">Name</label>
-                  <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Your Name" required>
+                  <label for="name">Name</label>
+                  <input type="name" class="form-control" id="name" name="email" placeholder="Your Name" required>
                 </div>
 
                 <div class="form-group">
-                        <label for="exampleFormControlInput1">Email address</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" id= "email" name ="email" placeholder="name@example.com" required>
+                        <label for="email">Email address</label>
+                        <input type="email" class="form-control" id="email" name ="email" placeholder="name@example.com" required>
                 </div>
                 <div class="form-group">
-                  <label for="exampleFormControlTextarea1">Comments</label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="10" required></textarea>
+                  <label for="comments">Comments</label>
+                  <textarea class="form-control" id="comments" rows="10" required></textarea>
                 </div>
 
                 <button type="button" class="btn btn-secondary">Submit</button>
