--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                   <textarea class="form-control" id="comments" rows="10" required></textarea>
                 </div>
 
-                <button type="button" class="btn btn-secondary">Submit</button>
+                <button type="submit" class="btn btn-secondary">Submit</button>
               </form>
               </div>
          <div class="col-md-3"></div>
