added firebase storage to contact form

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="col-lg-1"></div>
                 <div class="col-lg-10">
                    
-                    <p id="about-text"> Amena Ahmed is currently pursuing web development as a student at Northwestern University's Coding Bootcamp and aspires to use computer science to create a positive impact in education, health care, and other humanitarian causes. She received her bachelor's in Elementary Education from Northeastern Illinois University and taught in various classrooms for over five years, specializing in utilizing technology in teaching methods. 
+                    <p id="about-text"> Amena Ahmed is currently pursuing web development as a student at Northwestern University's Coding Bootcamp and aspires to use computer science to create a positive impact in education, health care, and other humanitarian causes. She received her bachelor's in Elementary Education from Northeastern Illinois University and taught in various classrooms for over five years, with extensive experience in utilizing various technologies in teaching methods. 
                     </p>
                 </div>
                 <div class="col-lg-1"></div>
