--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
     <title>Contact</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.7.1/firebase.js"></script>
 </head>
 <body>
     <div class="container-fluid fullpage"> 
@@ -41,7 +43,8 @@
 
         </div>
         <div class="col-lg-8" id="contact-1">
-    <form accept-charset="UTF-8" action="https://usebasin.com/f/65da175249c3" method="POST">
+                <!-- accept-charset="UTF-8" action="https://usebasin.com/f/65da175249c3" method="POST" -->
+    <form >
                 <div class="form-group">
                   <label for="name">Name</label>
                   <input type="name" class="form-control" id="name" name="email" placeholder="Your Name" required>
@@ -56,7 +59,7 @@
                   <textarea class="form-control" id="comments" rows="10" required></textarea>
                 </div>
 
-                <button type="submit" class="btn btn-secondary">Submit</button>
+                <button type="submit" class="btn btn-secondary" id="submit">Submit</button>
               </form>
               </div>
          <div class="col-md-3"></div>
@@ -67,5 +70,50 @@
             <div class="col-lg-1"></div>
         </div>    
       </div>
+
+
+<script>  
+
+var config = {
+    apiKey: "AIzaSyClsKiusJEEYnXW2pD2uoG1SI6BM2VX1L8",
+    authDomain: "profile-contact-3212c.firebaseapp.com",
+    databaseURL: "https://profile-contact-3212c.firebaseio.com",
+    projectId: "profile-contact-3212c",
+    storageBucket: "",
+    messagingSenderId: "681088717282"
+  };
+  firebase.initializeApp(config);
+
+var database = firebase.database();
+
+var name = "";
+var email = "";
+var comments = "";
+
+$("#submit").on("click", function(event){
+    event.preventDefault();
+
+    name = $("#name").val().trim();
+    email = $("#email").val().trim();
+    comments = $("#comments").val().trim();
+
+
+    database.ref().push({
+        name: name,
+        email: email,
+        comments: comments,
+        dateadded: firebase.database.ServerValue.TIMESTAMP
+    });
+    database.ref().orderByChild(database.dateadded).limitToLast(1);
+});
+
+database.ref().on("child_added", function(snapshot){
+    var contactInfo = snapshot.val();
+    console.log("contactInfo: " + contactInfo.name, contactInfo.email, contactInfo.comments);
+}, function(errorObject){
+    console.log("The read failed: "+errorObject.code);
+});
+
+</script>
 </body>
 </html>
