--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -15,7 +15,7 @@
         <div class="row">
         <div class="col-lg-12">
         <div nav class="navbar navbar-expand-lg" id="navbar">
-                <a class="navbar-brand mainnavtxt" id="nav-name" href="#">Amena Ahmed</a>
+                <a class="navbar-brand mainnavtxt" id="nav-name" href="/about">Amena Ahmed</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                 </button>
