--- a/app/contact.html
+++ b/app/contact.html
@@ -50,16 +50,16 @@
                 </div>
             </div>
     <!-- Intro Row -->
-<div class="row" id="portfolio_div">
-        <div class="col-lg-1" id="port_t"></div>
-                <div class="col-lg-10" id="titlecol"> 
-                        <!-- <div class="row"></div>  -->
+<!-- <div class="row" id="portfolio_div"> -->
+        <!-- <div class="col-lg-1" id="port_t"></div> 
+                <div class="col-lg-10" id="titlecol">  
+                        <div class="row"></div> 
                         <div id="portfolio_title"><span>|Let's get in touch|</span></div>
                 </div>
-        <div class="col-lg-1"></div>
-</div>
+        <div class="col-lg-1"></div> -->
+<!-- </div>  -->
 <!-- /Intro Row   -->
-<div class="row">
+<div class="row contact-row">
             <div class="col-sm-1 col-xs-12"></div>
             <div class="col-sm-10 col-xs-12 contactinfo">
                 <p id="chat-text"> I would love to get in touch and chat! Please reach out through any of the contact methods below. </p>
@@ -95,11 +95,11 @@
                 <button type="submit" class="btn btn-secondary" id="submit">Submit</button>
               </form> -->
     <!-- FOOTER -->
-    <div class="row" id="about-4">
+    <footer class="row" id="about-4">
         <div class="col-xs-12" id="connect-footer">
            
         </div>
-    </div>
+    </footer>
     <!-- END FOOTER -->
 </div>
 </body>
