--- a/app/contact.html
+++ b/app/contact.html
@@ -20,7 +20,7 @@
             <div class="row">
                     <div class="col-lg-12">
                                   <!-- NAVBAR  -->
-                <nav class="navbar navbar-expand-lg navbar-light " id="navbar">
+                <nav class="navbar fixed-top navbar-expand-lg navbar-light " id="navbar">
                         <a class="navbar-brand mr-0 mainnavtxt" id="nav-name" href="/about">Amena Ahmed</a>
                             <button class="navbar-toggler ml-1" id="nav-toggle" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                     <span class="navbar-toggler-icon"></span>
