--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -22,15 +22,15 @@
     <div class="row">
         <div class="col-lg-12">
         <!-- NAVBAR  -->
-        <nav class="navbar navbar-expand-lg navbar-light " id="navbar">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light " id="navbar">
                         <a class="navbar-brand mr-0 mainnavtxt" id="nav-name" href="/about">Amena Ahmed</a>
                                 <button class="navbar-toggler ml-1" id="nav-toggle" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                         <span class="navbar-toggler-icon"></span>
                                 </button>
                         <div class="navbar-collapse collapse text-right" id="navbarSupportedContent">
                                 <ul class="navbar-nav ml-auto">
-                                <li class="nav-item">
-                                        <a class="nav-link" id="navlink2" href="/portfolio">Portfolio</a>
+                                <li class="nav-item active">
+                                        <a class="nav-link" id="navlink2" href="/portfolio" >Portfolio</a>
                                 </li> 
                                 <li class="nav-item">
                                         <a class="nav-link" id="navlink1" href="https://drive.google.com/file/d/1Ri_MdMf9Tjjamp1mPWNGbMdw2iFG_AKW/view?usp=sharing" target="_blank">Resume</a>
