Added links to github readme and live app for Edessia.

--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
             <div class="col-sm-6 col-md-6 col-md-pull-6" id="ttl-col">
                 <div class="title">
                      <p id="p3tt"> Software Development | Full Stack | MERN </p>
-                     <p id="p4tt">I build websites and apps. I spend a lot of time making them as helpful and beautiful as possible. I am invested in the quality of the user experience that stems from thoughtful structural design. I am an all-round developer, but feel most passionate about back-end work. I love coding in my spare time and enjoy working and learning with other programmers. </p> 
+                     <p id="p4tt">I build helpful and beautiful websites and apps. I spend a lot of time making them efficient and easy to use. I believe that the quality of the user experience stems from thoughtful structural design. I am an all-round developer, but feel most passionate about back-end work. I love coding in my spare time and enjoy working and learning with other programmers. </p> 
                 </div>
             </div>
             <div class="col-sm-6 col-md-6 col-md-push-6" id="traits">
