--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -53,17 +53,6 @@
     </div>
 <!-- End Row 1-->
 
-<!-- Intro Row -->
-<!-- <div class="row" id="portfolio_div">
-        <div class="col-lg-1" id="port_t"></div>
-                <div class="col-lg-10" id="titlecol"> 
-                         <div class="row"></div>  -->
-                        <!-- <div id="portfolio_title"><span>|Web Development Portfolio|</span></div>
-                </div>
-        <div class="col-lg-1"></div>
-</div>  -->
-<!-- /Intro Row   -->
-
 <!-- Projects Row 0.5 -->
 <div class="row games1" id="portfolioRow0-5">
         <div class="col-lg-12">
@@ -72,7 +61,7 @@
             <div class="row pic_row">
                         <div class="col-md-6 port-special">
                                 <div class="card single-proj cardedesia" >
-                                        <a  href="https://timelender.herokuapp.com/" target="_blank"><img class="card-img-top port_pic_special" id="timelender" src="https://i.imgur.com/kzEr8bz.png" width="430px" height="350px" alt="portfolio art"></a>
+                                        <a  href="http://edesia7.herokuapp.com/" target="_blank"><img class="card-img-top port_pic_special" id="timelender" src="https://i.imgur.com/kzEr8bz.png" width="430px" height="350px" alt="portfolio art"></a>
                                         <!-- <div class="card-body">
                                                 <h6 class="card-title port_item1">Time Lender</h6>
                                                 <h6 class="card-subtitle mb-2 text-muted item_text1">React.js and MySQL</h6>
@@ -85,8 +74,8 @@
                                         <h6 class="card-title port_item1">Edessia</h6>
                                         <h6 class="card-subtitle mb-2 text-muted item_text1">React.js and MySQL</h6>
                                         <p class="card-text sub_item_text1">Enabling users to buy locally prepared food by the next meal time.</p>
-                                        <a href="https://github.com/Amena99/CharityProject/blob/master/README.md" target="_blank" class="card-link"><i class="fa fa-github fa-lg mr-1"></i>GitHub Repo</a>
-                                        <a href="https://timelender.herokuapp.com/" target="_blank" class="card-link"><i class="fa fa-tablet fa-lg mr-1" aria-hidden="true"></i>Go to live app</a>
+                                        <a href="https://github.com/Amena99/Edesia/blob/master/README.md" target="_blank" class="card-link"><i class="fa fa-github fa-lg mr-1"></i>GitHub Repo</a>
+                                        <a href="http://edesia7.herokuapp.com/" target="_blank" class="card-link"><i class="fa fa-tablet fa-lg mr-1" aria-hidden="true"></i>Go to live app</a>
                                 </div>
                         </div>      
                         </div>
