removed Hungry App

--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -120,7 +120,7 @@
                 <h4 id="heading1">Additional Full Stack Projects</h4>
                 <p class="sub-heading1">Built in JavaScript with server-side Node.js </p>
                 <div class="row pic_row">
-                        <div class="col-md-6 port-pic">
+                        <!-- <div class="col-md-6 port-pic">
                         <div class="card sub-proj">
                                 <a  href="https://amena99.github.io/HungryAPI/" target="_blank"><img class="card-img-top port_pic1" id="hungry" src="https://i.imgur.com/tF2sgxU.png" width="300px" height="250px" alt="portfolio art"></a>
                                 <div class="card-body">
@@ -131,7 +131,7 @@
                                         <a href="https://amena99.github.io/HungryAPI/" target="_blank" class="card-link"><i class="fa fa-tablet fa-lg mr-1" aria-hidden="true"></i>Go to live app</a>
                                 </div>
                         </div>     
-                        </div>
+                        </div> -->
                         <div class="col-md-6 port-pic-sec"> 
                                 <div class="card sub-proj">
                                         <a  href="https://devvo-nabb.herokuapp.com/" target="_blank"><img class="card-img-top port_pic1" id="trains" src="https://i.imgur.com/E8yHI2R.png" width="300px" height="250px" alt="portfolio art"></a>
